a special section EXPERIENCE-NOW added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           'unique-color': "#494949",
           'common-color': '#737373',
           'heading-text-color': '#212121',
-          "nav": "#E9E9E9"
+          "nav": "#E9E9E9",
+          'backg-color': '#abef5f80'
         }
       }
     }
@@ -543,58 +544,25 @@
             </div>
           </div>
 
-
           </div>
 
 
         <!-- discuss projects -->
-        <div class="project-discuss-container hero pb-20"
-             style="background-image: url(./images/bg.jpg);">
-        <div class="hero-overlay bg-opacity-0"></div>
-
-    <div class="project-discuss-content   text-center m-4">
-      <div class="max-w-md lg:max-w-2xl">
-        <a class="btn rounded-full btn-discuss font-bold px-8 my-4 text-unique-color text-base">
-          <i class="fa-solid fa-arrow-right"></i>Let's Connect
-        </a>
-        <h1 class="text-5xl font-bold">Let's Discuss Next Project</h1>
-        <p class="py-6">
-          The proposal focuses on combining natural elegance with modern utility, stressing open floor designs, exposed wooden beams, large windows for natural light, and sustainable materials.
-        </p>
-      </div>
-
-      <div class="project-discuss-name-form flex w-full lg:h-12 h-32 flex-col gap-4 lg:flex-row mb-3">
-        <div class="card bg-white rounded-full grid flex-grow place-items-center justify-items-start pl-5 text-sm text-gray-500">First Name*</div>
-        <div class="card bg-white rounded-full grid flex-grow place-items-center justify-items-start pl-5 text-sm text-gray-500">Last Name*</div>
-      </div>
-      <div class="project-discuss-number-form flex w-full lg:h-12 h-32 flex-col gap-4 lg:flex-row">
-        <div class="card bg-white rounded-full grid flex-grow place-items-center justify-items-start pl-5 text-sm text-gray-500">Phone Number*</div>
-        <div class="card bg-white rounded-full grid flex-grow place-items-center justify-items-start pl-5 text-sm text-gray-500">Email Number*</div>
-      </div>
-
-      <div class="project-discuss-text-area-form card h-36 my-4 rounded-3xl bg-white grid flex-grow place-items-start text-sm text-gray-500 p-4">Write your message here</div>
-    
-    <a class="project-discuss-button-form btn rounded-full bg-primary-color text-secondary-color text-xl text-lg font-extrabold lg:w-full w-4/5">Sent Mail
-      <button class="btn btn-circle bg-secondary-color text-white btn-sm">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-4 w-5"
-          fill="none"
-          viewBox="8 0 15 15"
-          stroke="currentColor">
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="1.5"
-            d="M10 14L21 3M21 3H14M21 3V10"/>
-        </svg>
-      </button>
-    </a>
+        <div
+            class="new-experience-section hero pt-5 mb-5"
+            style="background-image: url(./images/458.jpg);">
+  <div class="hero-overlay bg-opacity-10"></div>
+  <div class="hero-content text-neutral-content text-center">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-3xl font-extrabold text-unique-color">Are You ready For a New Experience?</h1>
+      <p class="mb-5 text-sm font-medium text-unique-color">
+        We, ARinterio is ready to give your house a completely new look, which is achieved through numerous solutions you can find at our page.
+      </p>
+      <button class="btn bg-backg-color border-primary-color text-base font-extrabold">Contact Now</button>
     </div>
-        </div>
-
+  </div>
+</div>
     </main>
-
 
     <!-- footer -->
     <footer class="bg-secondary-color text-primary-content p-10 ">
