bg image name change

--- a/index.html
+++ b/index.html
@@ -543,14 +543,13 @@
   
             </div>
           </div>
-
           </div>
 
 
         <!-- discuss projects -->
         <div
             class="new-experience-section hero pt-5 mb-5"
-            style="background-image: url(./images/458.jpg);">
+            style="background-image: url(./images/bg-2.jpg);">
   <div class="hero-overlay bg-opacity-10"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
